# foodie

./: .gitignore  Makefile  README.md  app.py  components_input.py  components_panels.py  epicure_service.py  main.py  pyproject.toml  recipe_store.py  theme.py  todo.md  ui_components.py  viz.py
.claude/: settings.json
app/: leans.py  main.py  models.py
app/services/: epicure_service.py  recipe_store.py
app/ui/: common.py  components_input.py  components_panels.py  theme.py  viz.py
tests/: conftest.py  test_epicure_service.py  test_leans.py  test_recipe_store.py  test_sanity.py
